Fix diisplaying code on small widths
Change code styling to wrapping words because of long code strings, those cause a horizontal scrolling on small widths.

Remove `figcaption` from lower opacity rule.

Some fixes in code fragments in `/minimalistic-vscode` article

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -24,7 +24,7 @@ code[class*="language-"] {
   direction: ltr;
   text-align: left;
   word-spacing: normal;
-  word-break: normal;
+  word-break: break-word;
   tab-size: 4;
   hyphens: none;
   hyphens: none;
