--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -133,7 +133,8 @@
     table,
     ul,
     ol,
-    blockquote {
+    blockquote,
+    figcaption {
       opacity: 0.9;
     }
   }
